...
            VStack (spacing: 5){
                HStack {
                    Text("From")
                        .font(.system(size: 15, weight: .regular))
                        .foregroundColor(.gray)
                        .frame(width: UIScreen.main.bounds.width/2 - 30)
                        .accessibilityIdentifier("fromTravelHeader")
                    Text("To")
                        .font(.system(size: 15, weight: .regular))
                        .foregroundColor(.gray)
                        .frame(width: UIScreen.main.bounds.width/2 - 30)
                        .accessibilityIdentifier("toTravelHeader")
                }
                HStack {
                    Text(from)
                        .font(.system(size: 23, weight: .semibold))
                        .frame(width: UIScreen.main.bounds.width/2 - 30)
                    Text(to)
...
                                Text("Departure")
                                    .font(.system(size: 13, weight: .regular))
                                    .foregroundColor(.gray)
                                    .frame(width: UIScreen.main.bounds.width/2 - 30)
                                
                                Text(date.formatted(date: .abbreviated, time: .shortened))
                                    .accessibilityIdentifier("departureDate")
                                    .font(.system(size: 14, weight: .regular))
                                    .frame(width: UIScreen.main.bounds.width/2 - 30)
                            }
                        }
                        if let dateArrival = dateArrival {
                            VStack(spacing: 5) {
...
                                .fill(Color.white)
                                .frame(width: 10, height: 10)
                                .position(x: 0, y: geometry.size.height/2)
                        }
                    }
                    .frame(minWidth: 100, maxHeight: 50, alignment: .top)
                    .accessibilityIdentifier("fromToLine")
                    
                    Text(to)
                        .font(.title2)
                        .fontWeight(.semibold)
                        .scaledToFit()
                        .lineLimit(2)
...
