...
                                    .padding(10)
                            }
                            .fixedSize()
                        }
                        .disabled(buttonTapped)
                        .padding(.bottom)
                        .accessibilityIdentifier("proceedButton")
                    }
                    else {
                        Button(action:  {
                            if !buttonTapped {
                                buttonTapped = true
                                Task {
...
                                    .padding(10)
                            }
                            .fixedSize()
                        }
                        .disabled(buttonTapped)
                        .padding(.bottom)
                        .accessibilityIdentifier("saveTravelButtonTwoWays")
                    }
                }
                else {
                    Button(action: {
                        if !buttonTapped {
                            buttonTapped = true
...
